--- a/source/Ncs/Ncs.Agency.Ui.Web/Pages/Index.cshtml
+++ b/source/Ncs/Ncs.Agency.Ui.Web/Pages/Index.cshtml
@@ -1,10 +1,12 @@
-﻿@page
-@model IndexModel
-@{
-    ViewData["Title"] = "Home page";
+﻿@{
+	ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div>
+	<form action="." method="post">
+		<label for="client-name">Name</label>
+		<input type="text" name="client-name" id="id-client-name">
+
+		<button type="submit">submit</button>
+	</form>
 </div>
