--- a/source/Ncs/Ncs.Agency.Ui.Web/Views/Home/Index.cshtml
+++ b/source/Ncs/Ncs.Agency.Ui.Web/Views/Home/Index.cshtml
@@ -1,24 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model DebtCollectionClientCreateModel_V1
-@{
-}
+﻿@model List<ListEntry>
 
 <div>
-	<form asp-controller="Home" asp-action="Create" method="post">
+	<a asp-action="Create">@SharedBasicLocalizer["Create new"]</a>
+	@foreach (var item in Model)
+	{
 		<div>
-			<label asp-for="Name"></label>
-			<input asp-for="Name">
+			<a asp-controller="Home" asp-action="Details" asp-route-id="@item.Identity">Go</a>
+			@item
 		</div>
-
-		<div>
-			<label asp-for="PersonalIdentificationNumber"></label>
-			<input asp-for="PersonalIdentificationNumber">
-
-		</div>
-		<div>
-			<button type="submit">Create client</button>
-		</div>
-	</form>
+	}
 </div>
