--- a/source/dataz/mithriljs/tablify-dev.css
+++ b/source/dataz/mithriljs/tablify-dev.css
@@ -1,13 +1,15 @@
 html,
 body {
-  /* background: #222;
-  color: #ddd; */
+  background: #222;
+  color: #ddd;
   font-family: sans-serif;
   margin: 0;
   padding: 0;
 }
 pre {
   margin: 0;
+  font-size: 0.7rem;
+  opacity: 0.8;
 }
 table {
   width: 100%;
