--- a/source/dataz/mithriljs/tablify-dev.css
+++ b/source/dataz/mithriljs/tablify-dev.css
@@ -5,6 +5,7 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
+  font-size: 20px;
 }
 .tablify pre {
   margin: 0;
@@ -18,8 +19,10 @@ body {
   background-color: rgba(8, 128, 64, 0.1);
 }
 .tablify button {
+  font-size: 0.7rem;
+  padding: 0 10px;
   border: none;
   background: transparent;
-  color: darkgoldenrod;
+  color: royalblue;
   cursor: pointer;
 }
